Fixes dark mode issue with button:hover

--- a/src/assets/css/5-elements/_buttons.scss
+++ b/src/assets/css/5-elements/_buttons.scss
@@ -1,6 +1,6 @@
 button, .button {
     background-color: var(--textColor);
-    color: white;
+    color: var(--backgroundColor);
     
     display: inline-flex;
     align-items: center;
@@ -18,6 +18,7 @@ button, .button {
     text-decoration: none;
     border: unset;
     &:hover {
-        background-color: rgba(26, 26, 26, 0.85);
+        background-color: var(--primaryColor);
+        color: white;
     }
 }
